<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moca Ballot Selection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ballot_confirmation">BallotConfirmationActivity</string>
    <string name="confirmation_question">Are you sure to vote for the next candidate?</string>
    <string name="confirmation">YES</string>
    <string name="cancel_confirmation">NO</string>
    <string name="print_ballot">Imprimir Voto</string>
    <string name="question">Best football player ever</string>
    <string name="dialog_title">AVISO</string>
    <string name="dialog_message">Al apretar \'Continuar\', acerque su clave privada (firma electrónica) a la cámara para validar su voto.</string>
    <string name="dialog_final_message">Una vez impreso su voto, proceda a la verificación de la encriptación de su voto</string>
    <string name="dialog_neutral">Continuar</string>
    <string name="title_activity_generate_qrcode">GenerateQRCodeActivity</string>
    <string name="title_activity_show_qr">ShowQRActivity</string>
    <string name="continue_to_receive_signature">Receive Signature</string>
    <string name="read_encrypted_qr">Read this QR code with your VoterApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="receive_candidates">Receive Candidates</string>
    <string name="read_candidate_qr">Press \'Receive Candidates\' to configure election information.
    Put QR code generated from AdminApp near camera. </string>
    <string name="read_public_key_qr">Press \'Receive Public Key\' to configure election information.
    Put QR code generated from AdminApp near camera. </string>
    <string name="receive_public_key">Receive Public Key</string>
    <string name="title_activity_display_candidates">DisplayCandidatesActivity</string>
    <string name="title_activity_capture_code">CaptureCodeActivity</string>

</resources>
