<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="three_part_vote.ballotSelection.ConfigurationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_candidate_qr"
        android:typeface="monospace"
        android:textSize="20sp"
        android:padding="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/user_info_candidates"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_public_key_qr"
        android:typeface="monospace"
        android:textSize="20sp"
        android:padding="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/user_info_public_key"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/receive_candidates_info"
        android:text="@string/receive_candidates"
        android:textSize="25sp"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"
        android:layout_gravity="center"
        android:padding="25dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/receive_public_key_info"
        android:text="@string/receive_public_key"
        android:textSize="25sp"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"
        android:layout_gravity="center"
        android:padding="25dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
