<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="375dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_question"
        android:layout_gravity="center"
        android:typeface="monospace"
        android:textSize="25dp"
        android:padding="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_candidate"
        android:padding="25dp"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="25dp" >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmation_button"
            android:text="@string/confirmation"
            android:textSize="30dp"
            android:background="@drawable/btn_green"
            style="@style/ButtonText"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_confirmation_button"
            android:text="@string/cancel_confirmation"
            android:textSize="30dp"
            android:background="@drawable/btn_red"
            style="@style/ButtonText"
            android:layout_marginLeft="30dp" />

    </LinearLayout>

</LinearLayout>